Closed Bug 382205 Opened 19 years ago Closed 18 years ago

Clicking scrollbutton in <select> listbox scrolls by two <option>s

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: jaas)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files)

Attached file testcase
Steps to reproduce: 1. Load the testcase. 2. Click the down scrollbutton. Result: scrolls by two options. Expected: should scroll by one option.
Flags: blocking1.9?
Can anyone reproduce this on Windows or Linux?
WFM with Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a8pre) Gecko/2007091104 Minefield/3.0a8pre
also wfm on Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.9a8pre) Gecko/2007091005 Minefield/3.0a8pre ID:2007091005
Flags: blocking1.9? → blocking1.9+
Attached patch fix v1.0Splinter Review
Dave Hyatt added code that messed this up in bug 129893 a long time ago. We should just kill it off.
Attachment #284430 - Flags: review?(cbarrett)
Does this mean scrolling speed is decreased? We already scroll slower than Safari does.
I don't think so. And it doesn't really matter, we can't be doing what is done in that ifdef anyway.
Hyatt added a similar thing in presshell, see the "#ifdef MOZ_WIDGET_COCOA" there. I think getting rid of that might actually change scrolling speed in a way that matters, but this shouldn't.
Comment on attachment 284430 [details] [diff] [review] fix v1.0 Ah, that's what I was thinking of when I read this patch, then.
Attachment #284430 - Flags: review?(cbarrett) → review+
Attachment #284430 - Flags: superreview?(roc)
Attachment #284430 - Flags: superreview?(roc) → superreview+
landed on trunk
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: