clicking scrollbutton in listbox should only scroll by one option. b=382205 r=cbarrett sr=roc